--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore . && sass-lint-vue components layouts assets"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore . "
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.1",
@@ -29,7 +29,6 @@
     "node-sass": "^4.7.2",
     "postcss-nesting": "^7.0.1",
     "sass-lint": "^1.12.1",
-    "sass-lint-vue": "^0.4.0",
     "sass-loader": "^8.0.2"
   }
 }
