--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.1",
-    "nuxt": "^2.11.0"
+    "nuxt": "^2.11.0",
+    "vue2-perfect-scrollbar": "^1.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.03",
